src/index.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');

:root {
    --custom-dark: #2C2C2C;
    --cutom-light: #E7E9EE;
    --custom-black: #171717;
    --custom-red: #FE0000;
    --custom-blue: #54A9E9;
    --custom-orange: #FF8B49;

    --app-padding: 12pt;
    --app-padding-x: 8pt;
    --app-padding-y: var(--app-padding);
    --app-padding-top: 16pt;
    --app-padding-left: var(--app-padding-x);
    --app-padding-bottom: 0pt;
    --app-padding-right: var(--app-padding-x);

    --app-inner-width: calc(100% - var(--app-padding-left) - var(--app-padding-right));
    --app-inner-height: calc(100% - var(--app-padding-top) - var(--app-padding-bottom));

    --app-bottom: var(--app-padding-bottom);
    --app-top: var(--app-padding-top);

    --tg-top: calc(100vh - var(--tg-viewport-stable-height));
    --tg-bottom: 0;

    --container-max-width: 454px;
}

/* @media screen and (min-width: 992.2px) {
    :root {
        --container-height: 288px;
        --container-max-height: 33vh;
        --container-max-width: 454px;
    }
}
@media screen and (max-width: 992px) {
    :root {
        --container-max-height: 33vh;
        --container-height: 288px;
        --container-max-width: 454px;
    }
} */


input, button, textarea {
    -webkit-appearance: none;
	-moz-appearance:    none;
	appearance:         none;
}


.btn {
    position: relative;

    padding: 6pt;
    box-sizing: border-box;
    /* background-color: var(--tg-theme-button-color); */
    background-color: var(--tg-theme-secondary-bg-color);
    border: none;
    border-radius: 16px;
    -webkit-border-radius: 16px;
    -moz-border-radius: 16px;
    
    color: var(--tg-theme-button-text-color);
    color: white;
    font-family: inherit;
    cursor: pointer;
    
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none;   /* Chrome/Safari/Opera */
    -khtml-user-select: none;    /* Konqueror */
    -moz-user-select: none;      /* Firefox */
    -ms-user-select: none;       /* Internet Explorer/Edge */
    user-select: none;           /* Non-prefixed version, currently
                                    not supported by any browser */

    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
    -webkit-tap-highlight-color: transparent;
}
.btn:hover > *:not(.btn__badge) {
    opacity: .7;
}
.btn:active > *:not(.btn__badge) {
    opacity: .5;
}

.btn_color_blue {
    background-color: var(--tg-theme-button-color);
}

.btn__content {
    width: 100%;
    height: 100%;

    display: flex;
    align-items: center;
    justify-content: center;
}
.btn__content > img {
    height: 100%;
}

.btn__badge {
    position: absolute;
    display: flex;

    width: 27px;
    height: 27px;
    top: 0;
    right: 0;
    transform: translate(30%, -50%);

    justify-content: center;
    align-content: center;
    padding: 2px;
    box-sizing: border-box;

    outline: 1px solid var(--custom-blue);
    border-radius: 50%;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
}
.btn__badge > span {
    display: inline-block;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;

    font-size: 1.25rem;
    line-height: 1.25rem;
    text-align: center;
}

.btn__badge_color_red {
    color: white;
    background-color: var(--custom-red);
    outline: none;
}
.btn__badge_color_blue {
    color: white;
    background-color: var(--custom-blue);
    outline: none;
}


.msg-form {
    width: 100%;
    height: 61px;

    padding: 4pt 0;
    box-sizing: border-box;
    
    border-radius: 12px;
    -webkit-border-radius: 12px;
    -moz-border-radius: 12px;

    background-color: var(--custom-black);
    background-color: var(--tg-theme-bg-color);

    display: flex;
    gap: 6pt;
    align-items: stretch;
}

.msg-form_mobile {
    position: fixed;
    
    width: var(--app-inner-width);
    
    bottom: var(--app-bottom);
    left: var(--app-padding-left);
}
.msg-form_ios {
    position: fixed;

    width: var(--app-inner-width);
    
    bottom: var(--app-bottom);
    left: var(--app-padding-left);
}

.msg-form__field {
    height: 100%;
    width: 100%;
    background-color: var(--tg-theme-bg-color);

    padding: 0;
    padding-left: 8pt;
    box-sizing: border-box;
    
    color: var(--tg-theme-text-color);
    font-size: 1.25rem;
    outline: none;

    /* border: 2px solid var(--tg-theme-secondary-bg-color); */
    border: 2px solid var(--custom-dark);
    border-radius: 12px;
    -webkit-border-radius: 12px;
    -moz-border-radius: 12px;
}
.msg-form__field_focused {
    border-color: var(--custom-blue);
}
.msg-form__field:focus {
    border-color: var(--custom-blue);
}

.msg-form__field-placeholder {
    height: 100%;
    width: 100%;
    background-color: var(--tg-theme-secondary-bg-color);

    padding: 0;
    padding-left: 8pt;
    box-sizing: border-box;
    
    color: white;
    font-size: 1.25rem;
    outline: none;

    border: 2px solid var(--custom-dark);
    border-radius: 12px;
    -webkit-border-radius: 12px;
    -moz-border-radius: 12px;
}
.msg-form__field-placeholder_focused {
    border-color: var(--custom-blue);
}

.msg-form__send-btn {
    padding: 0;
    padding-right: 5px;
    height: 100%;

    /* background-color: var(--tg-theme-bg-color); */
    /* border: solid 1px var(--custom-dark); */

    border-radius: 12px;
    -webkit-border-radius: 12px;
    -moz-border-radius: 12px;
}


.root-document {
    position: relative;
    margin: 0 auto;
    height: 100vh;
    width: 100%;
}

.root-document_placing_fixed {
    position: fixed;
    top: 0;
}
.root-document_placing_tg {
    position: fixed;
    height: var(--tg-viewport-stable-height);
    top: var(--tg-top);
}
.root-document_no-scroll {
    overflow: hidden;
}

.root-document__page {
    margin: 0;

    font-family: "Open Sans", sans-serif;
    -webkit-text-size-adjust: none;

    width: 100%;
    height: 100%;
}
.root-document__page::after {
    content: "";
    background-color: inherit;

    display: block;
    position: fixed;
    z-index: -1000;

    margin: 0;
    border: 0;

    width: 100vw;
    height: 100vh;
    padding-bottom: 70px;
    top: -60px;
    transform: translateY(70px);
}

.root-document__page_theme_tg {
    background-color: var(--tg-theme-bg-color);
    color: var(--tg-theme-text-color);
}


#root {
    width: 100%;
    height: 100%;

    position: absolute;
    top: 0;
    left: 0;
}


.app {
    position: absolute;

    left: 0;
    right: 0;
    margin: auto;

    height: var(--app-inner-height);
    width: var(--app-inner-width);
    max-width: var(--container-max-width);
    
    padding: var(--app-padding-y) var(--app-padding-x);
    padding-top: var(--app-padding-top);
    padding-left: var(--app-padding-left);
    padding-bottom: var(--app-padding-bottom);
    padding-right: var(--app-padding-right);
}

.app__content {
    height: 100%;
    width: 100%;
    padding-bottom: 72pt;
    box-sizing: border-box;

    display: flex;
    flex-direction: column;
    justify-content: start;
    gap: 16pt;
}

.app__content_for-keyboard {
    padding-bottom: 64px;
}
.app__content_for-ios {
    padding-bottom: 94px;
}

.content-log {
    position: fixed;
    top: calc(var(--tg-top) + var(--tg-viewport-stable-height) / 2);
    transform: translateY(-50%);
    color: black;
    text-shadow: 2px 2px white;
    z-index: 10000;
    
    outline: 1px solid green;
}
.content-log_hidden {
    display: none;
}
.update-num-log {
    position: fixed;
    top: 0;
    color: black;
    text-shadow: 2px 2px white;
    z-index: 10000;
}

.app__container {
    position: relative;
    overflow: hidden;
    
    width: 100%;

    height: 100%;
    flex-grow: 1;

    outline: solid 1px var(--custom-dark);

    border-radius: 16px;
    -webkit-border-radius: 16px;
    -moz-border-radius: 16px;
}
.app__container_fixing-height {
    position: absolute;
    flex-grow: 0;
    
    width: var(--app-inner-width);
    left: var(--app-padding-left);
}

.app__container_empty::before {
    content: "";
    display: block;

    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;

    background-color: var(--cutom-light);
    background-image: url("imgs/anonim-girl_placeholder.png");
    background-repeat: no-repeat;
    background-size: contain;
    background-position: 50%;
}


.app__footer {
    position: absolute;
    z-index: 1000;
    left: var(--app-padding-left);

    outline: 1px solid black;
    bottom: 12pt;
    width: var(--app-inner-width);
    height: 36pt;
    
    border-radius: 16px;
    -webkit-border-radius: 16px;
    -moz-border-radius: 16px;
}

.app__footer_hidden {
    position: absolute;
    visibility: hidden;
    opacity: 0;
    width: 0;
    height: 0;
    z-index: -1000;
}


.bottom-menu {
    display: flex;
    gap: 4pt;
    justify-content: space-between;

    height: 100%;
    width: 100%;
}

.bottom-menu__btn {
    flex-shrink: 1;
    width: 15%;
}

/*a crutch*/
.bottom-menu__btn_mod_report img {
    position: absolute;
    width: 60px;
    height: auto;
    top: -18%;
    right: 9%;
}

.bottom-menu__btn_mod_next {
    flex-grow: 1;
    width: 50%;
    font-size: 1.75rem;
}
.bottom-menu__btn_mod_next > .btn__content {
    gap: 16pt;
}


.dialog {
    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.dialog__msg-list {
    padding: 8pt 0;
    margin: 0;

    height: 100%;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    
    list-style: none;
    color: black;
}

.dialog__msg-item {
    width: 100%;
    padding: 0;
    margin: 0;
    overflow: hidden;
}
.dialog__msg-item:not(:last-child) {
    margin-bottom: 16pt;
}


.msg {
    position: relative;
    color: white;
    padding: 8pt 16pt;
    margin: 0;
    border-radius: 16px;
    -webkit-border-radius: 16px;
    -moz-border-radius: 16px;
}
.msg::before {
    content: "";
    position: absolute;

    width: 20px;
    height: 20px;
    background-color: transparent;

    border-style: solid;
    border-color: transparent;
    border-width: 20px;

    bottom: -10px;
}

.msg_user_current {
    max-width: 264px;
    margin-left: auto;
    margin-right: 8pt;

    background-color: var(--custom-blue);
}
.msg_user_current::before {
    border-bottom-color: var(--custom-blue);
    border-right-width: 0;

    border-radius: 0 100%;
    -webkit-border-radius: 0 100%;
    -moz-border-radius: 0 100%;
    right: -14.5px;

    transform-origin: center; 
    transform:rotate(35deg);
}
.msg_user_current .msg__header {
    color: var(--custom-orange);
}
.msg_user_companion {
    max-width: 256px;
    margin-right: auto;
    margin-left: 8pt;

    background-color: var(--custom-dark);
}
.msg_user_companion .msg__header {
    color: var(--custom-blue);
}
.msg_user_companion::before {
    border-bottom-color: var(--custom-dark);
    border-left-width: 0;

    border-radius: 100% 0;
    -webkit-border-radius: 100% 0;
    -moz-border-radius: 100% 0;
    left: -14.5px;

    transform-origin: center; 
    transform:rotate(-35deg);
}

.msg__header {
    position: relative;
    font-size: .87rem;
}

.msg__content {
    position: relative;
}

.msg__text {
    font-size: 1rem;
    margin-top: 0;
}
.msg__text:last-child {
    margin-bottom: 0;
}

